# neuronlp-train

./: .gitignore  README.md  project.yml  pyproject.toml
configs/: classifier.cfg  full_model_config.cfg  multilabel_classifier.cfg  ner_config.cfg  senter_config.cfg
scripts/: create-data-to-label.py  create_full_model_data.py  custom_score.py  evaluate_neg.py  evaluate_rel.py  prepare_binary_cls_data.py  preprocess_bin_cls.py  preprocess_cls.py  preprocess_floret.py  preprocess_multilabel.py  preprocess_negex.py  preprocess_ner.py  preprocess_relex.py  train_floret.py
